[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Objects/ControlsUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Controls/ControlRight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/UI/controls/space_place/spacebar_place1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/UI/controls/space_place/spacebar_place3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/UI/controls/space_place/spacebar_place2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/UI/controls/controls_background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/UI/controls/right_place/right_place1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/UI/controls/right_place/right_place2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/controls/right_place/right_place3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/UI/controls/left_place/left_place2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/UI/controls/left_place/left_place3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/UI/controls/left_place/left_place1.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Objects/Controls/ControlJump.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Objects/Controls/ControlLeft.tscn" type="PackedScene" id=14]




[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 8 )

[node name="ControlsUI" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ControlsBar" type="Sprite" parent="."]
position = Vector2( 160, 174 )
texture = ExtResource( 6 )

[node name="ControlJumpPos" type="Position2D" parent="."]
position = Vector2( 184, 170 )

[node name="RetrieveJump" type="TextureButton" parent="ControlJumpPos"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLeftPos" type="Position2D" parent="."]
position = Vector2( 112, 170 )

[node name="RetrieveLeft" type="TextureButton" parent="ControlLeftPos"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlRightPos" type="Position2D" parent="."]
position = Vector2( 136, 170 )

[node name="RetrieveRight" type="TextureButton" parent="ControlRightPos"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 170 )
control_type = 2

[node name="ControlLeft" parent="." instance=ExtResource( 14 )]
position = Vector2( 112, 170 )
control_type = 1

[node name="ControlJump" parent="." instance=ExtResource( 13 )]
position = Vector2( 184, 170 )

[node name="BarRetriever" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarRetriever"]
position = Vector2( 160, 176 )
shape = SubResource( 1 )
[connection signal="pressed" from="ControlJumpPos/RetrieveJump" to="." method="_on_RetrieveJump_pressed"]
[connection signal="pressed" from="ControlLeftPos/RetrieveLeft" to="." method="_on_RetrieveLeft_pressed"]
[connection signal="pressed" from="ControlRightPos/RetrieveRight" to="." method="_on_RetrieveRight_pressed"]
[connection signal="place_in_world" from="ControlRight" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlRight" to="." method="_on_Control_retrieve_from_world"]
[connection signal="place_in_world" from="ControlLeft" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlLeft" to="." method="_on_Control_retrieve_from_world"]
[connection signal="place_in_world" from="ControlJump" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlJump" to="." method="_on_Control_retrieve_from_world"]
